# mangoServer

./: .gitignore  stack.yaml
mangoClient/: mangoClient.cabal
mangoClient/app/: Main.hs
mangoEmbedded/: mangoEmbedded.cabal
mangoEmbedded/app/: Main.hs
mangoServer/: mangoServer.cabal
mangoServer/app/: Main.hs
mangoServer/src/: API.hs  MangoClientLib.hs
plugin1/: plugin1.cabal
plugin1/src/: Plugin1.hs  User.hs
plugin2/: plugin2.cabal
plugin2/src/: Book.hs  Plugin2.hs
