name:                mangoClient
version:             0.1.0.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable mangoClient
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , http-client
                     , mangoServer
                     , servant-client
                     , transformers
  default-language:    Haskell2010
