name:                mangoEmbedded
version:             0.1.0.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable mangoEmbedded
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , http-client
                     , plugin1
                     , servant-client
                     , transformers
  default-language:    Haskell2010
