name:                mangoServer
version:             0.1.0.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable mangoServer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , plugin1
                     , plugin2
                     , servant
                     , servant-mock
                     , servant-server
                     , QuickCheck
                     , warp
  default-language:    Haskell2010
