name:                mangoServer
version:             0.1.0.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable mangoServer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mangoServer
                     , plugin1
                     , plugin2
                     , servant-server
                     , warp
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  build-depends:       base
                     , http-client
                     , plugin1
                     , plugin2
                     , servant-client
                     , servant-server
  exposed-modules:     API
                       MangoClientLib
  default-language:    Haskell2010

  