name:                plugin1
version:             0.1.0.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Plugin1
                       User
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant
                     , servant-mock
                     , servant-server
                     , QuickCheck
                     , warp
  default-language:    Haskell2010

